<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/baseline_category_24"
            android:title="@string/menu_category" />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/baseline_local_offer_24"
            android:title="@string/menu_offers" />
        <item
            android:id="@+id/nav_newProduct"
            android:icon="@drawable/baseline_autorenew_24"
            android:title="@string/menu_new_product" />
        <item
            android:id="@+id/nav_my_orders"
            android:icon="@drawable/baseline_shopping_cart_24"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/baseline_shopping_cart_checkout_24"
            android:title="@string/menu_cart" />
    </group>
</menu>